--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Geekmeet</title>
   <base href="/">
   <!--Bootstrap Start-->
+
         <link href="app/assets/css/bootstrap-3.3.7/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="app/assets/css/bootstrap-3.3.7/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
         <link href="app/assets/css/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css" rel="stylesheet" type="text/css"/>
@@ -33,7 +34,37 @@
         <link rel='stylesheet' id='jQuery_datepicker_css-css'  href='app/assets/css/datepicker/jquery.ui.all.min.css' type='text/css' media='all' />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script type='text/javascript' src='https://www.google.com/recaptcha/api.js'></script>
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
+  <script src="https://cdn.auth0.com/w2/auth0-widget-5.js"></script>
+<!-- <script type="text/javascript" src="//platform.linkedin.com/in.js">
+    api_key: 812nofjpm8avr4
+    authorize: true
+    onLoad: onLinkedInLoad
+</script>
+<script type="text/javascript">
+    
+    // Setup an event listener to make an API call once auth is complete
+    function onLinkedInLoad() {
+        IN.Event.on(IN, "auth", getProfileData);
+    }
+
+    // Handle the successful return from the API call
+    function onSuccess(data) {
+        console.log(data);
+    }
+
+    // Handle an error response from the API call
+    function onError(error) {
+        console.log(error);
+    }
+
+    // Use the API call wrapper to request the member's basic profile data
+    function getProfileData() {
+        IN.API.Raw("/people/~").result(onSuccess).error(onError);
+    }
+
+</script> -->
 </head>
 
   
@@ -45,6 +76,7 @@
 <script src="app/assets/css/plugins/fullcalendar/lib/moment.min.js" type="text/javascript"></script>
 <script type='text/javascript' src='app/assets/js/jquery/jquery.js'></script>
 
+<!-- <script type='text/javascript' src='https://www.google.com/recaptcha/api.js'></script> -->
 <script src="./app/assets/css/bootstrap-3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="app/assets/css/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
 <script src="app/assets/css/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js" type="text/javascript"></script>
