login with linkedin2

--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
-  <script src="https://cdn.auth0.com/w2/auth0-widget-5.js"></script>
-<!-- <script type="text/javascript" src="//platform.linkedin.com/in.js">
-    api_key: 812nofjpm8avr4
-    authorize: true
-    onLoad: onLinkedInLoad
-</script>
-<script type="text/javascript">
+  <!-- <script src="https://cdn.auth0.com/w2/auth0-widget-5.js"></script> -->
+
+<!-- <script type="text/javascript">
     
     // Setup an event listener to make an API call once auth is complete
     function onLinkedInLoad() {
