--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
-  <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
+  <!-- <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script> -->
   <!-- <script src="https://cdn.auth0.com/w2/auth0-widget-5.js"></script> -->
 
 <!-- <script type="text/javascript">
