--- a/src/index.html
+++ b/src/index.html
@@ -26,17 +26,17 @@
         <!-- <link rel='stylesheet' id='woocommerce-general-css'  href='app/assets/css/woocommerce/woocommerce.css' type='text/css' media='all' /> -->
         <link rel='stylesheet' id='templatic-directory-css-css'  href='app/assets/css/Directory/css/style.css' type='text/css' media='all' />
         <!-- <link href="app/assets/css/Directory/css/admin_style.css" rel="stylesheet" type="text/css"/> -->
-        <link rel='stylesheet' id='directory-css-css'  href='app/assets/css/style.css' type='text/css' media='all' />
+       <!--  <link rel='stylesheet' id='directory-css-css'  href='app/assets/css/style.css' type='text/css' media='all' /> -->
         <link rel='stylesheet' id='tmp-responsive-css'  href='app/assets/css/Directory/css/responsive.css' type='text/css' media='all' />
         <link rel='stylesheet' id='tmpl_dir_css-css'  href='app/assets/css/Directory/style.css' type='text/css' media='all' />
         <link rel='stylesheet' id='tmpl_childtheme_view-css'  href='app/assets/css/theme-style.css' type='text/css' media='all' />
         <link rel='stylesheet' id='custom_style_css-css'  href='app/assets/css/custom_style.css' type='text/css' media='all' />
 
-        <link rel="stylesheet" href="/node_modules/angular2-busy/build/style/busy.css">
+        <!-- <link rel="stylesheet" href="/node_modules/angular2-busy/build/style/busy.css"> -->
         <!-- <link rel='stylesheet' id='jQuery_datepicker_css-css'  href='app/assets/css/datepicker/jquery.ui.all.min.css' type='text/css' media='all' /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+<!--   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script> -->
 </head>
 
   
