--- a/src/index.html
+++ b/src/index.html
@@ -93,3 +93,5 @@
 <!-- <script type='text/javascript' src="app/assets/js/Tevolution/foundation.min.js"></script> -->
 <script type='text/javascript' src="app/assets/js/custom.js" ></script>
 <!-- <script src="app/assets/css/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script> -->
+
+<script async src="//www.ads4mysite.com/adserver/www/delivery/asyncjs.php" crossorigin="anonymous"></script>
