--- a/src/index.html
+++ b/src/index.html
@@ -94,4 +94,4 @@
 <script type='text/javascript' src="app/assets/js/custom.js" ></script>
 <!-- <script src="app/assets/css/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script> -->
 
-<script async src="//www.ads4mysite.com/adserver/www/delivery/asyncjs.php" crossorigin="anonymous"></script>
+<script async src="//www.ads4mysite.com/adserver/www/delivery/asyncjs.php"></script>
