--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
         <!-- <link rel='stylesheet' id='woocommerce-smallscreen-css'  href='app/assets/css/woocommerce/woocommerce-smallscreen.css' type='text/css' media='only screen and (max-width: 768px)' /> -->
         <!-- <link rel='stylesheet' id='woocommerce-general-css'  href='app/assets/css/woocommerce/woocommerce.css' type='text/css' media='all' /> -->
         <link rel='stylesheet' id='templatic-directory-css-css'  href='app/assets/css/Directory/css/style.css' type='text/css' media='all' />
+
+
         <!-- <link href="app/assets/css/Directory/css/admin_style.css" rel="stylesheet" type="text/css"/> -->
        <!--  <link rel='stylesheet' id='directory-css-css'  href='app/assets/css/style.css' type='text/css' media='all' /> -->
         <link rel='stylesheet' id='tmp-responsive-css'  href='app/assets/css/Directory/css/responsive.css' type='text/css' media='all' />
@@ -56,6 +58,7 @@
 <script src="./app/assets/css/bootstrap-3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script> -->
 <script src="app/assets/css/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js" type="text/javascript"></script>
+<script async src="//www.ads4mysite.com/adserver/www/delivery/asyncjs.php"></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script> -->
 <!-- <script src="app/assets/css/plugins/ckeditor/ckeditor.js" type="text/javascript"></script> -->
 <!-- <script src="app/assets/css/plugins/bootstrap-select2/js/select2.full.js" type="text/javascript"></script> -->
