--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 <!-- <script src="app/assets/css/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script> -->
 <script src="app/assets/css/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js" type="text/javascript"></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script> -->
-<!-- <script src="app/assets/css/plugins/ckeditor/ckeditor.js" type="text/javascript"></script> -->
+<script src="app/assets/css/plugins/ckeditor/ckeditor.js" type="text/javascript"></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-select2/js/select2.full.js" type="text/javascript"></script> -->
 
 
