--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
 <script async src="//www.ads4mysite.com/adserver/www/delivery/asyncjs.php"></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script> -->
 <script src="app/assets/css/plugins/ckeditor/ckeditor.js" type="text/javascript"></script>
+<script src="https://apis.google.com/js/client.js?onload=checkAuth" async></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-select2/js/select2.full.js" type="text/javascript"></script> -->
 
 
