--- a/src/index.html
+++ b/src/index.html
@@ -53,15 +53,15 @@
 
 <!-- <script src="app/assets/css/plugins/fullcalendar/lib/moment.min.js" type="text/javascript"></script> -->
 <script type='text/javascript' src='app/assets/js/jquery/jquery.js'></script>
-<!-- <script type='text/javascript' src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
- -->
+<script type='text/javascript' src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
+
 <!-- <script type='text/javascript' src='https://www.google.com/recaptcha/api.js'></script> -->
 <script src="./app/assets/css/bootstrap-3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script> -->
 <script src="app/assets/css/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js" type="text/javascript"></script>
 <script async src="//www.ads4mysite.com/adserver/www/delivery/asyncjs.php"></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script> -->
-<script src="app/assets/css/plugins/ckeditor/ckeditor.js" type="text/javascript"></script>
+<!-- <script src="app/assets/css/plugins/ckeditor/ckeditor.js" type="text/javascript"></script> -->
 <script src="https://apis.google.com/js/client.js?onload=checkAuth" async></script>
 <!-- <script src="app/assets/css/plugins/bootstrap-select2/js/select2.full.js" type="text/javascript"></script> -->
 
