added multiple image

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
         <link rel='stylesheet' id='tmpl_childtheme_view-css'  href='app/assets/css/theme-style.css' type='text/css' media='all' />
         <link rel='stylesheet' id='custom_style_css-css'  href='app/assets/css/custom_style.css' type='text/css' media='all' />
         <link rel='stylesheet' href='app/assets/css/style-bootstrap.css' type='text/css' media='all' />
+        <link rel='stylesheet' href='app/assets/css/venues-add/fileinput.min.css' media='all' />
 
 
         <!-- <link rel="stylesheet" href="/node_modules/angular2-busy/build/style/busy.css"> -->
