--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         <!-- <link rel='stylesheet' id='jQuery_datepicker_css-css'  href='app/assets/css/datepicker/jquery.ui.all.min.css' type='text/css' media='all' /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<!--   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script> -->
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </head>
 
   
