--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,8 @@
 <!-- <script type='text/javascript' src='app/assets/js/Tevolution/tevolution-script.min.js'></script> -->
 <script type='text/javascript' src='app/assets/js/Tevolution-LocationManager/bootstrap-mini.js'></script>
 <!-- <script type='text/javascript' src="app/assets/js/Tevolution/foundation.min.js"></script> -->
+<script type='text/javascript' src="app/assets/js/jquery/maskedinput.min.js" ></script>
+<script type='text/javascript' src="app/assets/js/jquery/fileinput.min.js" ></script>
 <script type='text/javascript' src="app/assets/js/custom.js" ></script>
 <!-- <script src="app/assets/css/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script> -->
 
