--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script type='text/javascript' src="http://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
 </head>
 
   
@@ -54,7 +55,7 @@
 
 <!-- <script src="app/assets/css/plugins/fullcalendar/lib/moment.min.js" type="text/javascript"></script> -->
 <script type='text/javascript' src='app/assets/js/jquery/jquery.js'></script>
-<script type='text/javascript' src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
+
 
 <!-- <script type='text/javascript' src='https://www.google.com/recaptcha/api.js'></script> -->
 <script src="./app/assets/css/bootstrap-3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
