--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
-  <script type='text/javascript' src="http://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
+  <script type='text/javascript' src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
 </head>
 
   
