Added meta for prerender io

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="fragment" content="!">
   <title>Geekmeet</title>
   <base href="/">
   <!--Bootstrap Start-->
