--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 </head>
     <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
    <script type='text/javascript' src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
-<body class="wordpress">
+<body class="wordpress home singular singular-page layout-default tevolution-event-manager event-front-page location_manager mobile-header">
   <app-root>Loading...</app-root>
 </body>
 </html>
